[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voltagegpu-cli"
version = "0.1.0"
description = "VoltageGPU CLI - Command-line interface for managing GPU pods on VoltageGPU cloud platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "VoltageGPU Team", email = "support@voltagegpu.com" }
]
keywords = [
    "gpu",
    "cloud",
    "ai",
    "ml",
    "machine-learning",
    "deep-learning",
    "nvidia",
    "cuda",
    "rtx4090",
    "a100",
    "h100",
    "cli",
    "voltagegpu",
    "gpu-cloud",
    "inference",
    "training"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities"
]
dependencies = [
    "click>=8.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
volt = "volt.cli.main:main"

[project.urls]
Homepage = "https://voltagegpu.com"
Documentation = "https://docs.voltagegpu.com"
Repository = "https://github.com/Jabsama/VOLTAGEGPU-CLI"
Issues = "https://github.com/Jabsama/VOLTAGEGPU-CLI/issues"
Changelog = "https://github.com/Jabsama/VOLTAGEGPU-CLI/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["volt"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
